# TurboQuant

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements-harness.txt
docs/benchmarks/: qwen7b_rtx3090.json  qwen7b_rtx3090_2bit.json  qwen7b_rtx3090_2bit_gpu.json  qwen7b_rtx3090_gpu.json  rtx3090_qwen7b.md
examples/: basic.rs  longbench_smoke.jsonl  mixed_precision.rs
python_tests/: test_cache.py  test_harness.py
scripts/: benchmark_devstral.py  longbench_eval.py  needle_eval.py  quicktest_cuda.py  reproduce_ann_baselines.ps1  reproduce_validation.ps1  setup_rtx3090.bat  setup_rtx3090.ps1  setup_rtx3090.sh
src/: data.rs  error.rs  experiment.rs  kv.rs  lib.rs  lloyd_max.rs  math.rs  mixed.rs  mse.rs  packed.rs  pq.rs  prod.rs  rabitq.rs  rotation.rs
tests/: kv_cache.rs  mixed_precision.rs  pq.rs  rabitq.rs  stress.rs  technical.rs
turboquant_harness/: __init__.py  cache.py  hf_runner.py  longbench.py  needle.py  packing.py  quantization.py
